<resources>
    <string name="app_name">QuickNote</string>

    <!-- Main Menu Titles -->
    <string name="action_add_note">ADD NOTE</string>
    <string name="action_settings">Settings</string>
    
    <!-- Fragment Titles -->
    <string name="note_view_title">View Note</string>
    <string name="note_edit_title">Edit Note</string>
    <string name="note_create_title">New Note</string>
    <string name="application_settings_title">App Settings</string>
    
    <!-- Main List Long Click Context Menu -->
    <string name="edit_menu">Edit</string>
    <string name="delete_menu">Delete</string>

    <!-- Edit Fragment -->
    <string name="save_note_btn">Save Note</string>

    <!-- App Preferences -->
    <string name="general_preferences">General</string>
    <string name="title_preferences">Title</string>
    <string name="title_preferences_summary">The title will be used on the main Action Bar</string>
    <string name="color_preferences">Theme</string>
    <string name="color_preferences_dark_background">Dark Background</string>
    <string name="color_preferences_dark_background_summary">This will change the theme to a dark theme</string>

</resources>
