<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/general_preferences">

        <EditTextPreference
            android:key="title"
            android:title="@string/title_preferences"
            android:summary="@string/title_preferences_summary"
            android:defaultValue="@string/app_name" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/color_preferences">

        <CheckBoxPreference
            android:key="dark_background"
            android:title="@string/color_preferences_dark_background"
            android:summary="@string/color_preferences_dark_background_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>